...
        android:title=""
        app:showAsAction="always"
        android:iconTint="@color/text_icon"
        android:icon="@drawable/ic_action_search"
        />
    <item
        android:id="@+id/map2"
        android:title=""
        app:showAsAction="always"
        android:iconTint="@color/text_icon"
        android:icon="@drawable/ic_action_map"
        />
    <item
...
